--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -32,9 +32,10 @@ jobs:
       - name: Compile LaTeX document
         uses: xu-cheng/latex-action@v2
         with:
+          latexmk_use_xelatex: true
           working_directory: LaTeX
           root_file: main.tex
-          extra_fonts: ./fonts/*.ttf
+          extra_fonts: ./fonts
       - name: Uploading artifact
         uses: actions/upload-artifact@v2
         with:
