--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -40,7 +40,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: PDF
-          path: main.pdf
+          path: ./LaTeX/main.pdf
 
   # Deploy job 
   deploy:
