--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -24,11 +24,14 @@ concurrency:
 jobs:
   
   # Build job
-  build:
+  build-and-deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
       - name: Set up Git repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
       - name: Compile LaTeX document
         uses: xu-cheng/latex-action@v2
         with:
@@ -36,25 +39,6 @@ jobs:
           working_directory: LaTeX
           root_file: main.tex
           extra_fonts: ./fonts
-      - name: Uploading artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: PDF
-          path: ./LaTeX/main.pdf
-
-  # Deploy job 
-  deploy:
-
-    # Add a dependency to the build job
-    needs: build
-
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Upload artifact
